# ai-fucks

./: .gitignore  CLAUDE.md  PAPER_CHECKLIST.md  README.md  conftest.py  pyproject.toml  server.py
.claude/: settings.local.json
analyzer/: dashboard.html  evaluate.py  features.py  m4_findings.py  main.py  predict.py  profile.py  train.py  tune.py
fixtures/: seed_report.json
harness/: __init__.py
harness/adapters/fakes/: artifact_store.py  backbone.py  calibrator.py  classifier_head.py  dataset.py  metrics.py  randomness.py  splitter.py  threshold.py
harness/adapters/fs/: artifact_store.py  cached_backbone.py  nih_csv.py  nih_dataset.py  nih_images.py
harness/adapters/sklearn/: calibrator.py  head.py  lr_head.py  metrics.py  splitter.py  threshold.py
harness/adapters/torch/: __init__.py  backbone.py  trainer.py  txrv_backbone.py
harness/composition/: _finetune_pipeline.py  _publication_pipeline.py  factories.py  runner.py
harness/docs/: ARCHITECTURE.md  FINE_TUNING_DESIGN.md
harness/domain/: __init__.py  errors.py  types.py
harness/ports/: artifact_store.py  backbone.py  calibrator.py  classifier_head.py  dataset.py  metrics.py  randomness.py  splitter.py  threshold.py  trainer.py
harness/scripts/: __init__.py  run_ablation.py  run_pilot.py
results/: dashboard.html  index.html  report.json
tests/: test_evaluate.py  test_features.py  test_findings.py  test_profile.py  test_train.py  test_tune.py
tests/harness/contract/: test_artifact_store_contract.py  test_backbone_contract.py  test_calibrator_contract.py  test_classifier_head_contract.py  (+6 more)
(+29 files in other folders)
