[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cxr-heuristic-analyzer"
version = "0.4.0"
description = "Lightweight chest X-ray triage demo using classical pixel heuristics."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26,<3",
    "Pillow>=10.0,<12",
    "scipy>=1.11,<2",
    "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[project.scripts]
cxr-analyze  = "analyzer.main:main"
cxr-evaluate = "analyzer.evaluate:main"
cxr-train    = "analyzer.train:main"
cxr-serve    = "server:main"

[tool.setuptools]
packages = ["analyzer"]
py-modules = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "PIE", "RET", "ARG", "PTH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG"]
"analyzer/main.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["scipy.*", "sklearn.*"]
ignore_missing_imports = true
